--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^1.11.0",
+    "cors": "^2.8.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -33,3 +34,4 @@
     "vite": "^7.0.4"
   }
 }
+ 
