--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-is": "^19.1.1",
     "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
